# ppo-db_course_work_6_sem

src/: main.py  pyproject.toml  requirements.in  requirements.txt  service_locator.py
src/abstract_repositories/: iadvert_repository.py  icategory_repository.py  ideal_repository.py  iliked_repository.py  iuser_repository.py
src/core/: db.py
src/dto/: advert_dto.py
src/models/: advert.py  deal.py  liked.py  user.py
src/repositories/: advert_repository.py  category_repository.py  deal_repository.py  liked_repository.py  user_repository.py
src/routers/: advert.py  liked.py  main.py  user.py
src/services/: advert_service.py  auth_service.py  category_service.py  deal_service.py  liked_service.py
src/templates/: profile.html
src/templates/components/: adv_card.html
src/tests/: test_advert_repo.py
src/tests/services/: test_advert_service.py  test_auth_service.py  test_category_service.py  test_deal_service.py  test_liked_service.py
